<resources>
    <string name="app_name">GitHab</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="check_internet_connection">Check your Internet connection!</string>
    <string name="request_failed">The request failed!</string>
    <string name="auth_success">Auth success. accessToken = </string>
    <string name="error_auth">Error Auth with message: </string>

    <string name="enter_client_secret">enter here client secret</string>
    <string name="clientID">clientID</string>
    <string name="request">Request!</string>
    <string name="github">GitHub</string>
    <string name="enter_client_id">enter here client Id</string>
    <string name="redirect_url">redirectUrl</string>
    <string name="enter_redirect_url">enter here redirect url</string>

    <string name="project_name">Project Name</string>
    <string name="githab_repository">GitHab repository</string>

    <string name="avatar">avatar</string>

    <string name="enter_date">Enter Client ID and Client Secret!</string>


</resources>
